// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: false, state: none, hasSlottedContent: false and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
@media(hover:hover) {
  button {
    transition: border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: false, state: none, hasSlottedContent: false and compact: false 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
@media(hover:hover) {
  button {
    transition: border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover {
    border-color: var(--p-color-primary);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: false, state: none, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
@media(hover:hover) {
  button {
    transition: border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: false, state: none, hasSlottedContent: true and compact: false 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
@media(hover:hover) {
  button {
    transition: border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: false, state: none, hasSlottedContent: true and compact: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px) max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) max(2px, 8px * var(--p-internal-segmented-control-scaling, 1));
  border: 1px solid var(--p-color-contrast-lower);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
@media(hover:hover) {
  button {
    transition: border-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  }
  button:hover {
    border-color: var(--p-color-primary);
  }
}

.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-inline-end: .25rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: true, state: error, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-error);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-error-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: true, state: none, hasSlottedContent: false and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: true, state: none, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: true, state: none, hasSlottedContent: true and compact: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px) max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) max(2px, 8px * var(--p-internal-segmented-control-scaling, 1));
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
  margin-inline-end: .25rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: false, hasIcon: true, state: success, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-success);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-success-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: true, hasIcon: true, state: none, hasSlottedContent: false and compact: false 1`] = `
":host {
  display: block;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false, isSelected: true, hasIcon: true, state: none, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 1) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 1)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-xl));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isSelected: false, hasIcon: true, state: none, hasSlottedContent: false and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isSelected: false, hasIcon: true, state: none, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: pointer;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isSelected: true, hasIcon: true, state: none, hasSlottedContent: false and compact: false 1`] = `
":host {
  display: block;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true, isSelected: true, hasIcon: true, state: none, hasSlottedContent: true and compact: false 1`] = `
":host {
  display: block;
  opacity: 0.4 !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
  min-height: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  min-width: calc(max(calc(6px + 2.125ex), var(--p-internal-segmented-control-scaling, 0.5) * (calc(6px + 2.125ex) + 10px)) + (max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 2px) * 2);
  padding: max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) calc(max(2px, 8px * var(--p-internal-segmented-control-scaling, 0.5)) + 4px);
  border: 1px solid var(--p-color-primary);
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  background: var(--p-color-frosted-soft);
  color: var(--p-color-primary);
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  cursor: not-allowed;
}
button:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
span {
  display: block;
  font: normal normal 400 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: normal;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-medium);
}
.icon {
  height: 1.5rem;
  width: 1.5rem;
}"
`;
